--- a/src/main/resources/templates/index.twig
+++ b/src/main/resources/templates/index.twig
@@ -1,1 +1,9 @@
-Hello {{ var }}
+<html>
+	<head>
+	<title>Time</title>
+	</head>
+
+	<body>
+		<center><b>The time: {{ var }}</b></center>
+	</body>
+</html>
